src/main/java/com/example/tms/error/EmptyFieldException.java
package com.example.tms.error;

public class EmptyFieldException extends RuntimeException {
    public EmptyFieldException(String message) {super(message);}
}
